Fix collection with format handling