@@ -18,7 +18,6 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import reactor.core.publisher.Mono;
 
-import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Field;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -44,28 +43,22 @@ public class EnumTests {
         // normal case
         client.setStringEnumArray(Arrays.asList(ColorModel.BLUE, ColorModel.GREEN), Arrays.asList(ColorModel.GREEN, ColorModel.RED)).block();
 
-        Assertions.assertEquals(
-                Arrays.asList(ColorModel.BLUE.toString(), ColorModel.GREEN.toString()),
-                enumArrayArgumentCaptor.getValue());
+        Assertions.assertEquals(Arrays.asList(ColorModel.BLUE.toString(), ColorModel.GREEN.toString()),
+            enumArrayArgumentCaptor.getValue());
 
         HttpRequest request = new HttpRequest(HttpMethod.POST, "http://endpoint/");
         getRequestCallback(requestOptionsArgumentCaptor.getValue()).accept(request);
-        verifyQuery(request.getUrl().getQuery(),
-                "colorArrayOpt",
-                String.join(",", Arrays.asList(ColorModel.GREEN.toString(), ColorModel.RED.toString())));
+        verifyQuery(request.getUrl().getQuery(), "colorArrayOpt",
+            String.join(",", Arrays.asList(ColorModel.GREEN.toString(), ColorModel.RED.toString())));
 
         // case: array contains null
         client.setStringEnumArray(Arrays.asList(ColorModel.BLUE, null), Arrays.asList(null, ColorModel.RED)).block();
 
-        Assertions.assertEquals(
-                Arrays.asList(ColorModel.BLUE.toString(), ""),
-                enumArrayArgumentCaptor.getValue());
+        Assertions.assertEquals(Arrays.asList(ColorModel.BLUE.toString(), ""), enumArrayArgumentCaptor.getValue());
 
         request = new HttpRequest(HttpMethod.POST, "http://endpoint/");
         getRequestCallback(requestOptionsArgumentCaptor.getValue()).accept(request);
-        verifyQuery(request.getUrl().getQuery(),
-                "colorArrayOpt",
-                String.join(",", "", ColorModel.RED.toString()));
+        verifyQuery(request.getUrl().getQuery(), "colorArrayOpt", "," + ColorModel.RED);
     }
 
     @SuppressWarnings("unchecked")
@@ -82,30 +75,23 @@ public class EnumTests {
         EnumServiceAsyncClient client = new EnumServiceAsyncClient(impl);
 
         // normal case
-        client.setIntEnumArray(Arrays.asList(Priority.HIGH, Priority.LOW), Arrays.asList(Priority.LOW, Priority.HIGH)).block();
+        client.setIntEnumArray(Arrays.asList(Priority.HIGH, Priority.LOW), Arrays.asList(Priority.LOW, Priority.HIGH))
+            .block();
 
-        Assertions.assertEquals(
-                Arrays.asList("100", "0"),
-                enumArrayArgumentCaptor.getValue());
+        Assertions.assertEquals(Arrays.asList("100", "0"), enumArrayArgumentCaptor.getValue());
 
         HttpRequest request = new HttpRequest(HttpMethod.POST, "http://endpoint/");
         getRequestCallback(requestOptionsArgumentCaptor.getValue()).accept(request);
-        verifyQuery(request.getUrl().getQuery(),
-                "priorityArrayOpt",
-                "0,100");
+        verifyQuery(request.getUrl().getQuery(), "priorityArrayOpt", "0,100");
 
         // case: array contains null
         client.setIntEnumArray(Arrays.asList(Priority.HIGH, null), Arrays.asList(null, Priority.HIGH)).block();
 
-        Assertions.assertEquals(
-                Arrays.asList("100", ""),
-                enumArrayArgumentCaptor.getValue());
+        Assertions.assertEquals(Arrays.asList("100", ""), enumArrayArgumentCaptor.getValue());
 
         request = new HttpRequest(HttpMethod.POST, "http://endpoint/");
         getRequestCallback(requestOptionsArgumentCaptor.getValue()).accept(request);
-        verifyQuery(request.getUrl().getQuery(),
-                "priorityArrayOpt",
-                ",100");
+        verifyQuery(request.getUrl().getQuery(), "priorityArrayOpt", ",100");
     }
 
     @SuppressWarnings("unchecked")
@@ -124,21 +110,23 @@ public class EnumTests {
         // normal case
         client.setStringEnumMulti(Arrays.asList(ColorModel.BLUE, ColorModel.GREEN), Arrays.asList(ColorModel.GREEN, ColorModel.RED)).block();
 
-        Assertions.assertEquals(
-                Arrays.asList(ColorModel.BLUE.toString(), ColorModel.GREEN.toString()),
-                enumArrayArgumentCaptor.getValue());
+        Assertions.assertEquals(Arrays.asList(ColorModel.BLUE.toString(), ColorModel.GREEN.toString()),
+            enumArrayArgumentCaptor.getValue());
 
         HttpRequest request = new HttpRequest(HttpMethod.POST, "http://endpoint/");
         getRequestCallback(requestOptionsArgumentCaptor.getValue()).accept(request);
         Assertions.assertEquals("colorArrayOpt=Green&colorArrayOpt=Red", request.getUrl().getQuery());
     }
 
-    private static void verifyQuery(String query, String key, String value) throws UnsupportedEncodingException {
-        Assertions.assertEquals(query, URLEncoder.encode(key, StandardCharsets.UTF_8.name()) + "=" + URLEncoder.encode( value, StandardCharsets.UTF_8.name()));
+    private static void verifyQuery(String query, String key, String value) {
+        Assertions.assertEquals(
+            URLEncoder.encode(key, StandardCharsets.UTF_8) + "=" + URLEncoder.encode( value, StandardCharsets.UTF_8),
+            query);
     }
 
     @SuppressWarnings("unchecked")
-    private static Consumer<HttpRequest> getRequestCallback(RequestOptions requestOptions) throws NoSuchFieldException, IllegalAccessException {
+    private static Consumer<HttpRequest> getRequestCallback(RequestOptions requestOptions)
+        throws NoSuchFieldException, IllegalAccessException {
         Field field = RequestOptions.class.getDeclaredField("requestCallback");
         field.setAccessible(true);
         return (Consumer<HttpRequest>) field.get(requestOptions);
